Implement documentation of users
